--- a/src/scss/item-wrapper.scss
+++ b/src/scss/item-wrapper.scss
@@ -1,50 +1,51 @@
-/* Item widget wrappers */
-#trn .item-wrapper {
-  padding: 10px;
-  margin-bottom: 20px;
-}
-
-#trn .item-thumbnail {
-  float: left;
-}
-#trn .item-thumbnail img {
-  height: 100px;
-  width: 100px;
-}
-#trn .item-info {
-  margin-left: 110px;
-}
-#trn .item-info > ul {
-  margin-top: 16px;
-  margin-bottom: 0;
-  text-align: center;
-}
-#trn .item-title {
-  font-size: 1.5em;
-  display: block;
-}
-#trn .item-meta {
-  display: block;
-}
-#games .item-info span:nth-child(2) {
-  padding-bottom: 21px;
-}
-#tournaments .item-info ul {
-  margin-top: 0;
-}
-
-@media screen and (max-width: 500px) {
-  #trn .item-thumbnail {
-    width: 100%
+.trn {
+  &-item-wrapper {
+    padding: 10px;
+    margin-bottom: 20px;
   }
-  #trn .item-thumbnail img {
+
+  &-item-thumbnail {
+    float: left;
+  }
+  &-item-thumbnail img {
+    height: 100px;
+    width: 100px;
+  }
+  &-item-info {
+    margin-left: 110px;
+  }
+  &-item-info > ul {
+    margin-top: 16px;
+    margin-bottom: 0;
+    text-align: center;
+  }
+  &-item-title {
+    font-size: 1.5em;
     display: block;
-    margin-left: auto;
-    margin-right: auto;
   }
-  #trn .item-info {
-    margin-left: 0;
-    clear: both;
-    width: 100%;
+  &-item-meta {
+    display: block;
+  }
+  #games &-item-info span:nth-child(2) {
+    padding-bottom: 21px;
+  }
+  #tournaments &-item-info ul {
+    margin-top: 0;
+  }
+
+  @media screen and (max-width: 500px) {
+    &-item-thumbnail {
+      width: 100%
+    }
+    &-item-thumbnail img {
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    &-item-info {
+      margin-left: 0;
+      clear: both;
+      width: 100%;
+    }
   }
 }
