--- a/src/scss/forms.scss
+++ b/src/scss/forms.scss
@@ -106,3 +106,25 @@ input.trn,
     margin-bottom: 1rem;
   }
 }
+
+.trn {
+  &-was-validated &-form-control:valid {
+    border-color: $success;
+  }
+
+  &-was-validated &-form-control:invalid {
+    border-color: $danger;
+  }
+
+  &-invalid-feedback {
+    display: none;
+    width: 100%;
+    margin-top: 0.25rem;
+    font-size: 80%;
+    color: $danger;
+  }
+
+  &-was-validated &-form-control:invalid ~ &-invalid-feedback {
+    display: block;
+  }
+}
