--- a/src/scss/navigation-tabs.scss
+++ b/src/scss/navigation-tabs.scss
@@ -6,7 +6,7 @@
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
     padding-left: 0;
-    margin-bottom: 0;
+    margin-bottom: 1rem;
     list-style: none;
   }
 
