:bug: The games archive cards should not change state on hover.

--- a/src/scss/item-wrapper.scss
+++ b/src/scss/item-wrapper.scss
@@ -63,3 +63,11 @@
     }
   }
 }
+
+#games {
+  .trn-item-wrapper:hover {
+    border: 1px solid rgba(0, 0, 0, 0.125);
+    background: #fff;
+    cursor: inherit;
+  }
+}
